# openapi/gen/authzservice/server/doc.go
@@ -1,0 +1,24 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+/*
+Package server authz
+authz service for istio demo
+
+
+
+    Schemes:
+      http
+    Host: authz
+    BasePath: /authz/v1
+    Version: 1.0.0
+    Contact: Joey Zhang<me@zhangzhoujian.com>
+
+    Consumes:
+    - application/json
+
+    Produces:
+    - application/json
+
+swagger:meta
+*/
+package server
